# DanmakuEditor

./: .clang-format  CMakeLists.txt  README.md
assets/shader/: base.fs  base.vs
res/shader/: base.fs  base.vs
src/: CMakeLists.txt  Game.cpp  Game.hpp  KeyEvent.hpp  SpellManager.cpp  SpellManager.hpp  TestCase.cpp  TestCase.hpp  Window.cpp  Window.hpp  main.cpp
src/components/: Launchable.hpp  Livetime.hpp  Moveable.hpp  Renderable.hpp  Sprite.hpp  math.hpp
src/generators/: DirectionGenerator.cpp  DirectionGenerator.hpp  ModifierGenerator.cpp  ModifierGenerator.hpp  OriginGenerator.cpp  OriginGenerator.hpp  RepetitionGenerator.cpp  RepetitionGenerator.hpp
src/graphic/: Camera.hpp  Program.cpp  Program.hpp  ProgramLoader.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Sprite.hpp  SpriteFrame.hpp  SpriteFrameLoader.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp
src/resources/: ProgramLoader.cpp  ResourceManager.cpp  ResourceManager.hpp  SpriteFrameLoader.hpp
src/systems/: BaseSystem.hpp  LaunchSystem.cpp  LaunchSystem.hpp  LivetimeSystem.cpp  LivetimeSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/ui/: Ui.cpp  Ui.hpp
src/util/: Rect.hpp  Timer.hpp  base.hpp  debug.hpp
src/window/: Event.hpp  Listener.hpp  Window.cpp  Window.hpp
